# JNIDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/test/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c  native-lib.cpp
app/src/main/java/com/test/jnidemo/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/test/jnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
plugins/: settings.gradle.kts
plugins/messplugin/: build.gradle.kts
plugins/messplugin/src/main/kotlin/com/test/plugin/: MessExtension.kt  MessPlugin.kt
